--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load static %} {% load widget_tweaks %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -17,16 +17,24 @@
     </h3>
     <hr class="separator" />
     <!-- content -->
-
-    <form enctype="multipart/form-data" method="POST">
-      {% csrf_token %} {% for field in form %} {% for error in form.user.errors
-      %}
-
-      <p>{{ error }}</p>
-
-      {% endfor %} {% endfor %} {{form.as_p}}
-
-      <button type="submit" class="save">Save</button>
+    <div class="create-profile-form">
+      <p class="update-profile-picture-label">Update profile picture:</p>
+      <form action="" enctype="multipart/form-data" method="post">
+      {% csrf_token %}
+  
+      {% for hidden in form.hidden_fields %}
+        {{ hidden }}
+      {% endfor %}
+  
+      {% for field in form.visible_fields %}
+        <div class="form-group">
+          {{ field|add_class:'form-control'}}
+          {% for error in field.errors %}
+            <span class="error-message">{{ error }}</span>
+          {% endfor %}
+        </div>
+        {% endfor %}
+      <button type="submit" class="update-profile-button">Save</button>
     </form>
   </body>
 </html>
