--- a/templates/register.html
+++ b/templates/register.html
@@ -30,7 +30,7 @@
       <div class="form-group">
         {{ field|add_class:'form-control'}}
         {% for error in field.errors %}
-          <span class="error-message">{{ error }}</span>
+          <span class="register-error-message">{{ error }}</span>
         {% endfor %}
       </div>
       {% endfor %}
