--- a/static/main.css
+++ b/static/main.css
@@ -71,6 +71,16 @@
   margin-bottom: 10vh;
 }
 
+.dot{
+  width: 10px;
+  height: 10px;
+  background: black;
+  border-radius: 50%;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
 .post-author {
   position: relative;
   background: white;
