--- a/static/profile.css
+++ b/static/profile.css
@@ -11,7 +11,7 @@ html {
 }
 
 .top-bar {
-  width: 1700px;
+  width: 100%;
   height: 45px;
   background-color: white;
   border-bottom: solid 2px grey;
@@ -87,7 +87,7 @@ html {
 .change-profile {
   position: absolute;
   top: 300px;
-  left: 1200px;
+  left: 78%;
   text-decoration: none;
   color: black;
   background: transparent;
@@ -200,7 +200,8 @@ html {
 
 .post-text {
   background: white;
-  overflow: scroll;
+  overflow-y: scroll;
+  overflow-x: hidden;
   height: 150px;
   margin-top: 10px;
 }
