--- a/templates/update_profile.html
+++ b/templates/update_profile.html
@@ -13,7 +13,7 @@
     <!-- header -->
     <a href="/" class="home-link">Home</a>
     <h3 class="account-info-text">
-      Update profile info for<b class="username">{{user.username}}</b>
+      Update profile<b class="username">{{user.username}}</b>
     </h3>
     <hr class="separator" />
     <!-- content -->
