--- a/static/main.css
+++ b/static/main.css
@@ -279,3 +279,38 @@
   transition: 0.8s;
 }
 
+.search-bar {
+  float: right;
+  position: absolute;
+  padding: 6px;
+  border: none;
+  margin-top: 20px;
+  margin-left: 25vw;
+  font-size: 17px;
+}
+
+#search-bar{
+  background-color: white;
+}
+
+
+.search-bar-icon{
+  position: absolute;
+  width: 60px;
+  height: 30px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-left: 92vh;
+  margin-top: 21px;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  background-color: rgba(190, 24, 93, 0.3);
+  color: rgb(176, 168, 154);
+  font-family: "Abyssinica SIL", serif;
+}
+
+.search-bar-icon:hover{
+  transform: scale(1.1);
+  transition: 0.8s;
+}
